--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
+		
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
 		<!--[if IE]>
@@ -14,7 +14,7 @@
 			<div class="content">
 				<div id="large-header" class="large-header">
 					<canvas id="demo-canvas"></canvas>
-					<h1 class="main-title">Connect <span class="thin">Three</span></h1>
+					<h1 class="main-title">Code<span class="thin">Smith</span></h1>
 				</div>
 				
 			</div>
